# My-RAG-System

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
models/: document.py  query.py
services/: chromadb.py  document_processor.py  embedding_function.py  embedding_generator.py  generative_llm.py
tests/: conftest.py
tests/unit/: test_app.py
tests/unit/test_utils/: test_file_utils.py
ttrpg_ai_rag_assistant/: enums.py  ingest.py
utils/: enums.py  file_utils.py
